--- a/src/app/page/tab2/tab2.page.html
+++ b/src/app/page/tab2/tab2.page.html
@@ -1,12 +1,21 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
+<ion-header class="ion-no-border">
+  <ion-toolbar color="dark">
     <ion-title>
-      Tab 2
+      Encabezados
     </ion-title>
   </ion-toolbar>
+  
+  <ion-segment scrollable mode="" color="primary">
+   
+    <ion-segment-button mode="md" *ngFor="let categoria of categorias" [value]="categoria">
+      <ion-label class="ion-text-capitalize">{{categoria}}</ion-label>
+    </ion-segment-button>
+    
+  </ion-segment>
+
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" color="dark">
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Tab 2</ion-title>
