--- a/src/app/components/noticia/noticia.component.html
+++ b/src/app/components/noticia/noticia.component.html
@@ -1,13 +1,19 @@
-<ion-card color="dark">  
+<ion-card color="dark" >  
   <ion-card-header>
     <ion-card-subtitle>
-      <span class="text-primary">{{i+1}}. </span>
+      <span class="text-primary">{{i+1}}.</span>
       <span class="noticia-source-name">{{noticia.source.name}}</span>
+
+      <div class="noticia-more">
+        <ion-button (click)="lanzarMenu()" fill="clear" >
+          <ion-icon slot="icon-only" name="ellipsis-horizontal-outline"></ion-icon>
+        </ion-button>
+      </div>
     </ion-card-subtitle>
-    <ion-card-title>{{noticia.title}}</ion-card-title>
+    <ion-card-title (click)="abrirNoticia()">{{noticia.title}}</ion-card-title>
   </ion-card-header>
   
-  <ion-img [src]="noticia.urlToImage" *ngIf="noticia.urlToImage"></ion-img>
+  <ion-img class="animated fadeIn fast" [src]="noticia.urlToImage" *ngIf="noticia.urlToImage" (click)="abrirNoticia()"></ion-img>
   <ion-card-content>
     <p>{{noticia.description}}</p>
   </ion-card-content>
