--- a/src/app/components/noticias/noticias.component.html
+++ b/src/app/components/noticias/noticias.component.html
@@ -4,7 +4,7 @@
     <ion-col size="12" size-lg="3" size-md="4" size-sm="6" size-xs="12" 
     *ngFor="let noticia of noticias; let i=index">
       <!-- mandar noticia que se encuentra en el ngFor -->
-    <app-noticia [noticia]="noticia" [i]="i"></app-noticia>
+    <app-noticia [noticia]="noticia" [i]="i" [enFavoritos]="enFavoritos"></app-noticia>
     </ion-col>
   </ion-row>
 </ion-grid>
