--- a/src/app/page/tab2/tab2.page.html
+++ b/src/app/page/tab2/tab2.page.html
@@ -5,7 +5,7 @@
     </ion-title>
   </ion-toolbar>
   
-  <ion-segment scrollable mode="" color="primary">
+  <ion-segment scrollable mode="" color="primary" (ionChange)="cambioCategoria($event)">
    
     <ion-segment-button mode="md" *ngFor="let categoria of categorias" [value]="categoria">
       <ion-label class="ion-text-capitalize">{{categoria}}</ion-label>
@@ -16,11 +16,11 @@
 </ion-header>
 
 <ion-content [fullscreen]="true" color="dark">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <app-noticias [noticias]="noticias"></app-noticias>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+  <ion-infinite-scroll threshold="150px" (ionInfinite)="loadData($event)">
+    <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Cargando noticias...">
+    </ion-infinite-scroll-content>
+  </ion-infinite-scroll>
+  
 </ion-content>
