--- a/src/app/page/tab3/tab3.page.html
+++ b/src/app/page/tab3/tab3.page.html
@@ -1,17 +1,18 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
+<ion-header class="ion-no-border">
+  <ion-toolbar color="dark">
     <ion-title>
-      Tab 3
+      Favoritos
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content color="dark">
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+  <ion-slides [options]="sliderOpts" *ngIf="dataLocal.noticias.length===0">
+    <ion-slide>
+      <ion-label>No hay favoritos</ion-label>
+    </ion-slide>
+  </ion-slides>
+
+  <app-noticias *ngIf="dataLocal.noticias.length>0" [noticias]="dataLocal.noticias" [enFavoritos]="true"></app-noticias>
 </ion-content>
